[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/Shooter.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.333333, 0.027451, 0.282353, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.368627, 0.368627, 0.368627, 1 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 0.5 )

[node name="Shooter" type="StaticBody"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="CSGBox" type="CSGBox" parent="."]
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 2 )

[node name="CSGCylinder" type="CSGCylinder" parent="."]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.25
height = 1.5
material = SubResource( 3 )

[node name="CSGCylinder2" type="CSGCylinder" parent="."]
transform = Transform( 1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0 )
radius = 0.25
height = 1.5
material = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="ShotTimer" type="Timer" parent="."]
one_shot = true
__meta__ = {
"_editor_description_": "time between bursts"
}

[node name="BurstTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="BurstTimer" to="." method="_on_BurstTimer_timeout"]
